# KPP

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  SUPPORT.md  bin  cleanOutput.sh  copy_gckpp.sh  geos2kpp_parser.pl
.github/workflows/: ci-tests.yml
CMakeScripts/: KPP-Helpers.cmake
docs/: requirements.txt
docs/source/: index.rst
docs/source/about/: about_flexchem.rst  about_kpp.rst  requirements.rst
docs/source/basic-info/: about.rst  key_references.rst  requirements.rst
docs/source/creating-mechanisms/: chemical_families.rst  configuration_files.rst  reactions.rst  species.rst
docs/source/getting-started/: compilation.rst  create_f90_code_with_kpp.rst  installation.rst  set_env_vars.rst  tell_gc_to_use_custom_mech.rst
docs/source/reference/: known-bugs.rst
docs/source/usage-details/: generating_f90_code.rst  installation.rst  use_custom_mech.rst
kpp-2.2.3_01/: readme
kpp-2.2.3_01/int/: exponential.def~  exponential.f90~  rosenbrock.f  rosenbrock.f90  runge_kutta.f90
kpp-2.2.3_01/src/: Makefile  code.c  code.h  code_c.c  code_f77.c  code_f90.c  code_matlab.c  gdata.h  gen.c  kpp.c  lex.yy.c  scan.h  scan.l  scan.y  scanner.c
kpp-2.2.3_01/util/: UserRateLaws.f  UserRateLaws_FcnHeader.f  blas.f  blas.f90  sutil.f
kpp-2.2.4_gc/int/: rosenbrock_split.def  rosenbrock_split.f90
kpp-2.2.4_gc/src/: gdata.h  gen.c  y.tab.c  y.tab.h
kpp-code/: .gitignore  CMakeLists.txt  Makefile.defs
kpp-code/src/: .gitignore  CMakeLists.txt  code_f90.c  gdata.h  gen.c  scan.h  version.h.in
